# IUPAC_BlueBook-corpus

./: .gitattributes  .gitignore  BENCHMARK_TELEMETRY.md  BLUEBOOK_ALGORITHM.md  NORMALIZATION_DEPENDENCY_REPORT.md  README.md  SEMANTIC_CONVERSION_REPORT.md  pyproject.toml
benchmark_results/: blitz_report.md  blitz_results.json
data/: benchmark_sources.json  bluebook_clause_inventory.schema.json  bluebook_correction_overlay.schema.json  bluebook_document_node_store.schema.json  bluebook_document_nodes.schema.json  bluebook_reference_dependency_graph.schema.json  bluebook_reference_occurrences.schema.json  bluebook_reference_resolutions.schema.json  bluebook_rule_dependency_graph.dot  bluebook_rule_dependency_graph.json  bluebook_rule_dependency_graph.mmd  bluebook_semantic_rules.json  bluebook_semantic_work_packet.schema.json  bluebook_source_corpus.schema.json  bluebook_source_pages.schema.json  normalized_rule_chunk.schema.json  normalized_rule_language.schema.json  normalized_semantic_rule_schema.json  rule_schema.json  semantic_rule_schema.json  source_manifest.json
docs/: NORMALIZED_RULE_LANGUAGE.md
iupac_engine/: __init__.py  __main__.py  engine.py  model.py  naming.py  numeric.py  parser.py  perception.py  rule_engine.py  rules.py
scripts/: aggregate_semantic_rules.py  assemble_normalized_rule_corpus.py  audit_html_physical_occurrences.py  blitz_benchmark.py  bluebook_to_rules.py  build_clause_inventory.py  build_reference_dependency_graph.py  build_reference_resolution_overlays.py  build_rule_dependency_graph.py  build_semantic_work_packets.py  (+13 more)
(+52 files in other folders)
